# repro_cmake_transitive_shared

./: README.md  build.py
consumer/: CMakeLists.txt
consumer/include/: consumer.h
consumer/src/: consumer.cpp  my_app.cpp
foobar/: CMakeLists.txt
foobar/include/: bar.h  foo.h
foobar/src/: bar.cpp  foo.cpp
